<resources>
    <string name="app_name">Sapiens Delivery</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered_click_here"><u>Not Registered? Click Here!</u></string>
    <string name="are_you_a_customer">Are you a Customer?</string>
    <string name="logo">Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="wrong_auth">Wrong username or password</string>
    <string name="empty" />
    <string name="name">Name</string>
    <string name="profile">profile</string>
    <string name="place_order">Place Order</string>
    <string name="order_status">Order Status</string>
    <string name="accepting_delivery_men">Delivery men who are willing to accept your order</string>
    <string name="phone_number">Phone Number:</string>
    <string name="take_order">Take Order</string>
    <string name="complete_order">Complete Order</string>
    <string name="address">address</string>
    <string name="total">Total</string>
    <string name="phone_number_deli_Ostatus">phone number</string>
    <string name="customer_name_deli_Ostatus">Customer Name</string>
    <string name="order_on_the_way">Order On The Way</string>
    <string name="waiting_for_a_delivery_man_to_take_your_order">Waiting for a Delivery Man to Take Your Order…</string>
    <string name="proceed">Proceed</string>
    <string name="fee_you_charge_per_km">$Fee you charge per km</string>
</resources>